# fabric-solution-adv

./: .env.template  .gitignore  README.md
.github/workflows/: deploy-solution-from-template.yml  deploy-to-prod.yml  deploy-to-test.yml  feature_workspace_create_and_prepare.yml  orchestrate-daily-refresh.yml  sprint2-naive-solution.yml  sprint2-scalable-solution.yml  starter-workflow.yml  sync_dev_engineering.yml  sync_git_content_to_fabric.yml  test_and_promote_engineering.yml
.plans/: migrate-sql-to-lakehouse.md
config/: generate_solution_from_yml_simple.py  pyproject.toml  requirements.txt
config/fabric_core/: __init__.py  auth.py  capacity.py  git_integration.py  item_deployment.py  job_scheduler.py  utils.py  workspace.py
config/scripts/: create_feature_workspaces.py  deploy_with_fabric_cicd.py  generate_solution_from_yml_simple.py  manage_capacity.py  run_fabric_notebook.py  run_unit_tests.py  run_unit_tests_in_fabric.py  run_workspace_setup.py  run_workspace_setup_in_fabric.py  sync_dev_workspaces_from_main.py  sync_environment_workspaces.py
config/templates/v01/: v01-template.yml
config/v01/: v01-template.yml
docs/: README.md
docs/development/: av-doc-design_justifications.md  av-doc-naming_convention.md
docs/development/sprints/: av-doc-sprint2_devnotes.md
solution/consumption/Notebook_1.Notebook/: .platform
solution/datastores/lh_av01_cicd_test.Lakehouse/: .platform
solution/processing/: README.md
solution/processing/env-av01-dataeng.Environment/: .platform
solution/processing/nb-av01-cicd-test.Notebook/: .platform
(+62 files in other folders)
